style.css
body {
  margin: 0;
}

main {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.logo {
  margin: 20px 0;
}

.search-input {
  width: 300px;
  height: 30px;
  border: 1px solid rgb(224, 224, 224);
  border-radius: 8px;
  padding: 20px 10px;
  font-family: 'Roboto Flex', sans-serif;
}

.search-input:focus {
  box-shadow: 0 0 10px #719ECE;
  outline: none;
}

.results {
  width: 350px;
  padding: 30px;
}

.result-title {
  font-family: 'Roboto Flex', sans-serif;
  margin: 5px 0;
}

.result-link {
  font-family: 'Roboto Flex', sans-serif;
  color: #006621;
  text-decoration: none;
}

.result-snippet {
  font-family: 'Roboto Flex', sans-serif;
  margin: 5px 0 30px 0;
}

.spinner {
  margin: 100px auto 0;
  width: 70px;
  text-align: center;
}

.hidden {
  display: none;
}

.spinner>div {
  width: 18px;
  height: 18px;
  background-color: #333;

  border-radius: 100%;
  display: inline-block;
  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.spinner .bounce1 {
  -webkit-animation-delay: -0.32s;
  animation-delay: -0.32s;
}

.spinner .bounce2 {
  -webkit-animation-delay: -0.16s;
  animation-delay: -0.16s;
}

@-webkit-keyframes sk-bouncedelay {

  0%,
  80%,
  100% {
    -webkit-transform: scale(0)
  }

  40% {
    -webkit-transform: scale(1.0)
  }
}

@keyframes sk-bouncedelay {

  0%,
  80%,
  100% {
    -webkit-transform: scale(0);
    transform: scale(0);
  }

  40% {
    -webkit-transform: scale(1.0);
    transform: scale(1.0);
  }
}

@media (min-width: 650px) {
  .search-input {
    width: 600px;
  }

  .results {
    width: 700px;
  }
}

